preparing content, fixed header
preparing content, subtle background color changes
fixed header being cut off

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
 
+
 body {
     background-color: #1a1a1a;
     color: #fff;
@@ -28,7 +29,8 @@ body {
     margin-bottom: 20px;
     text-align: justify;
   }
-  
+
+
   .section {
     border: 2px solid #000;
     margin-bottom: 40px;
@@ -57,5 +59,9 @@ body {
   
   .button:hover {
     background-color: #666;
+  }
+
+  .intro-container {
+    padding-top: 50px;
   }
   
